styles/style.css
:root {
    --bgcolor: #323232;
    --lightbgcolor: #0f98f975;
    --layoutcolor: #3d70937a;
}
body {
    display: flex;
    flex-direction: column;
    row-gap: 3em;
    padding: 2em;
    color: white;
    background: linear-gradient(132deg, var(--bgcolor), var(--lightbgcolor));
}

header {
    display: flex;
    flex-direction: column;
    align-items: center;
}
header img {
    border: 0.2em solid white;
    border-radius: 7em;
    width: 7em;
    box-shadow: 0 0 0.5em 0.5em white;
    transition: box-shadow ease-in 0.5s;
}
nav {
    display: flex;
    flex-direction: row;
    justify-content: center;
    column-gap: 6em;
    padding: 1em;
    border-bottom: 0.5em solid white;
    background-color: var(--layoutcolor);
}

nav a {
    color: inherit;
    font-size: 1.5em;
    text-decoration-line: none;
}

nav a:hover {
    color:#ffffff5e;
    transition: all ease-in 0.3s;
}

article {
    display: flex;
    flex-direction: row;
    column-gap: 3em;
    padding: 1em;
    border-radius: 0.5em;
    background-color: var(--layoutcolor);
}
article p {
    font-size: 1.1em;
}
article img {
    width: 13em;
}

main {
    display: flex;
    flex-flow: column;
    row-gap: 3em;
    padding: 1em;
    border-radius: 0.5em;
    background-color: var(--layoutcolor);
}

main section {
    display: flex;
    flex-flow: row wrap;
    gap: 5em;
    flex: 2;
}

main section h4 {
    font-size: 1.3em;
}

 .repo {
    display: flex;
    flex: 1 1 20em;
    height: 18em;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    font-size: 1.1em;
    border: 0.5em solid black;
    border-radius: 0.5em;
}

.repo:hover {
    box-shadow: 0 0 1em 0.2em rgb(231, 233, 231);
    transition: all ease-in 0.5s;

}

.repo:hover h4 {
    box-shadow: 0 -0.2em 1em 0.1em rgb(231, 233, 231);
    transition: all ease-in 0.5s;
}

 .repo:nth-child(1) {
    background-image: url("../assets/pokemongo-weather-companion.png");
    background-size: 100% 100%;
}

.repo:nth-child(2) {
    background-image: url("../assets/work-day-scheduler.png");
    background-size: 100% 100%;
}
.repo:nth-child(3) {
    background-image: url("../assets/weather-dashboard.png");
    background-size: 100% 100%;
}
 .repo h4 {
    padding: 0.3em;
    position: relative;
    top: -4em;
    border: 0.4em solid black;
    border-bottom: none;
}

.repo ul {
    display: flex;
    flex-direction: row;
    column-gap: 7em;
}

.repo a {
    color: inherit;
    text-decoration: none;
}
.repo a:hover {
    color:#ffffff5e;
    transition: all ease-in 0.3s;
}

footer {
    display: flex;
    flex-direction: column;
    padding: 1em;
    border-radius: 0.5em;
    background-color: var(--layoutcolor);
}

footer ul {
    display: flex;
    column-gap: 3em;
}

